test/TestPhases/typechecker/valid/FunCall.blc
module

function calc() returns float64
    return 123.321
end

activity main ()()
    let x = calc()
    await false
end
