test/TestPhases/typechecker/invalid/SyncControlInFunction1.blc
module

function calc() returns float64
    await true
    return 123.321
end

activity main ()()
    let x = calc()
    await false
end
